changed the order of hero section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -84,7 +84,7 @@
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 items-center">
 
       <!-- Left Side - Profile Image (33% width) -->
-      <div class="order-2 lg:order-1 lg:col-span-4 flex justify-center animate-fade-in">
+      <div class="order-1 lg:col-span-4 flex justify-center animate-fade-in">
         <div class="relative group cursor-pointer">
           <!-- Animated border -->
           <div
@@ -110,7 +110,7 @@
       </div>
 
       <!-- Right Side - Info (67% width) -->
-      <div class="order-1 lg:order-2 lg:col-span-8 text-center lg:text-left">
+      <div class="order-2 lg:col-span-8 text-center lg:text-left">
         <!-- Animated greeting -->
         <div class="mb-4 animate-fade-in">
           <span
